update of gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Example/Pods
 Example/FiservTTP.xcodeproj/xcshareddata
 Example/FiservTTP.xcodeproj/project.xcworkspace/xcshareddata
 Example/FiservTTP.xcworkspace/xcshareddata
+Example/Build/Intermediates.noindex/XCBuildData
